Fix/PLF-7241: Wrong width of notification bar (#149)
* Fix/PLF-7241: Wrong width of notification bar

* add requested changes

--- a/platform-ui-skin/src/main/webapp/skin/less/platform/skin/uiToolbarContainer/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/platform/skin/uiToolbarContainer/Style.less
@@ -542,10 +542,6 @@
 		.user-name{
 			color: @linkColor;
 		}
-		.media {
-			min-width: 300px;
-			max-width: 100%;
-		}
 		> li {
 			display: block;
 			padding: 6px 10px 6px 10px;
@@ -809,4 +805,10 @@
             top:0;
         }
     }
+}
+
+@media (min-width: 768px) {
+	.uiNotificationPopoverToolbarPortlet .dropdown-menu {
+		width: 300px;
+	}
 }
